# Emscripten

./: README.md
projeto/: index.html
projetoemscripten(com JS)/: index.css  index.js
projetoemscripten(com WASM)/: index.html  index.js
senha/: Cargo.toml
senha/pkg/: package.json  password_analyzer.d.ts  password_analyzer.js  password_analyzer_bg.wasm  password_analyzer_bg.wasm.d.ts
senha/senhas para teste/: password.csv  passwords (1).json  passwords.csv  passwords.json
senha/src/: analise_senhas.rs  lib.rs  password_analysis.rs  tests.rs  utils.rs
senha/static/: explicacao.css  explicacao.html  index.css  index.html  passwords.json  script.js  style.css  worker.js
