[package]
name = "password_analyzer" #nome do pacote
version = "0.1.0"       
edition = "2021"

[lib]
crate-type = ["cdylib"] #vai ser compilado por uma biblioteca dinâmica(WebAssembly)

[dependencies]
serde = { version = "1.0.214", features = ["derive"] } #serialização e deserialização de dados, facilitando o uso de arquivos  
serde_json = "1.0.132" # trabalha diretamente com json
csv = "1.3" #trabalha com csv de maneira eficiente
rayon = "1.10"  # Para suporte a multithreading
wasm-bindgen = "0.2.95"
lazy_static = "1.4" 
